[package]
name = "error_generator"
description = "Transform structs and enums into fully qualified errors using attributes"
license = "MIT"
repository = "https://github.com/Warhorst/error_gen/"
readme = "README.md"
keywords = [
    "error",
    "error-handling",
    "code-generation",
    "attributes",
    "proc_macro"
]
version = "1.2.1"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0.76", features = ["full"]}
quote = "1.0.9"